--- a/src/pages/master.css
+++ b/src/pages/master.css
@@ -928,6 +928,7 @@ body {
   .vidukadhai-link,
   .oviyam-link,
   .puthaga-vimarsanam-link {
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 800;
   }
 }
